--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="bodyText">
-    <p>Hello! I'm Julia Hoffman, STEM tutor and founder of Bluejay Tutoring. Bluejay Tutoring works to virtually tutor students in science and math, no physical meetup required! I am experienced in both science and math education, with three years of tutoring experience and many satisfied clients. Don't let social distancing keep you or your child from a good education; sign up for a tutoring session today!</p>
+    <p>Hello! I'm Julia Hoffman, STEM tutor and founder of Bluejay Tutoring. Bluejay Tutoring works to virtually tutor students in science and math, with no physical meetup required! I am experienced in both science and math education, with three years of tutoring experience and many satisfied clients. Don't let social distancing keep you or your child from a good education. Sign up for a tutoring session today!</p>
   </div>
   <div class="pedigreeMath">
     <h4>Avalible math subjects:</h4>
@@ -37,7 +37,7 @@
     <p>Sessions are $15 dollars an hour, calculated to the nearest 20 minutes. Payment is conducted via Venmo to <a href="https://venmo.com/">@BluejayTutoring</a>.</p>
   </div>
   <div class="contact">
-    <p>To get in touch for a tutoring session, contact me today at <a href="mailto:hoffmanjc13@gmail.com?subject=Tutoring session">hoffmanjc13@gmail.com</a>. Sessions are conducted via <a href="https://www.skype.com/en/get-skype/">Skype</a>.<p>
+    <p>To get in touch for a tutoring session, contact me today at <a href="mailto:hoffmanjc13@gmail.com?subject=Tutoring session">hoffmanjc13@gmail.com</a>. Sessions are conducted via <a href="https://zoom.us/">Zoom</a>.<p>
   </div>
   <div class="footer">
     <h5>Made by Julia Hoffman | Logo created with LogoMakr.com | ©2019 Bluejay Tutoring</h5>
